# GoLicense-Classifier

./: .gitignore  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report-template.md
.github/workflows/: PYPI_release.yml  ci.yml
etc/: requirements.txt
src/: __init__.py  hello.py
src/LicenseClassifier/: classifier.py  error.py
src/LicenseClassifier/compiled/: libmatch.h
src/LicenseClassifier/tests/: test.py
src/Licenser/: __init__.py  classifier.py  error.py  libtest.py
