[metadata]
name = test-pkg-Avishrantssh
version = 0.0.1
author = Avishrant Sharma
author_email = avishrant@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AvishrantsSh/LicensePackage
project_urls =
    Bug Tracker = https://github.com/AvishrantsSh/LicensePackage/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src